--- a/Droid/Resources/layout/ThirdNativeView.xml
+++ b/Droid/Resources/layout/ThirdNativeView.xml
@@ -10,9 +10,16 @@
         android:textSize="25dp"
         local:MvxBind="Text PageContent" />
     <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:text="Moving to Next"
+            local:MvxBind="Click MoveToNext" />
+    <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="25dp"
         android:text="Moving to Front"
         local:MvxBind="Click MoveToFront" />
+
 </LinearLayout>
